--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="./todo/index.html">TO-DO LIST</a></li>
             <li><a href="./Notes/index.html">NOTES</a></li>
             <li><a href="./Timer/index.html">TIMER</a></li>
+            <li><a href="./Calender/index.html">CALENDER</a></li>
         </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
